test/compflags/stopEarly/dyno-resolve-only.good
dyno-resolve-only.chpl:9: error: type mismatch between declared type of 'b' and initialization expression
dyno-resolve-only.chpl:1: In function 'foo':
dyno-resolve-only.chpl:3: error: type mismatch between declared type of 'y' and initialization expression
