test/compflags/stopEarly/dyno-resolve-only.chpl
proc foo() {
  var x = 1.0;
  var y:int = x;
}

foo();
  
var a = 1.0;
var b:int = a;
